<resources>
    <string name="app_name" translatable="false">Reporter</string>
    <string name="Top">Top stories</string>
    <string name="Search">Search</string>
    <string name="settings_title">Settings</string>
    <string name="Fav.topic">Favorite Topic</string>
    <string name="Fav.topic_default" translatable="false">business</string>
    <string name="regex" translatable="false">✲</string>
    <string name="src" translatable="false">sources</string>
    <string name="My_subs">My Subscriptions</string>
    <string name="sources_title">Sources</string>
    <string name="Country">Your Country</string>
    <string name="Country_default" translatable="false">lt</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Lithuania_value" translatable="false">lt</string>
    <string name="UnitedStates" translatable="false">United States</string>
    <string name="UnitedStates_value" translatable="false">us</string>
    <string name="Argentina" translatable="false">Argentina</string>
    <string name="Argentina_value" translatable="false">ar</string>
    <string name="Australia" translatable="false">Australia</string>
    <string name="Australia_value" translatable="false">au</string>
    <string name="Austria" translatable="false">Austria</string>
    <string name="Austria_value" translatable="false">at</string>
    <string name="Belgium" translatable="false">Belgium</string>
    <string name="Belgium_value" translatable="false">be</string>
    <string name="Brazil" translatable="false">Brazil</string>
    <string name="Brazil_value" translatable="false">br</string>
    <string name="Bulgaria" translatable="false">Bulgaria</string>
    <string name="Bulgaria_value" translatable="false">bg</string>
    <string name="Canada" translatable="false">Canada</string>
    <string name="Canada_value" translatable="false">ca</string>
    <string name="China" translatable="false">China</string>
    <string name="China_value" translatable="false">cn</string>
    <string name="Colombia" translatable="false">Colombia</string>
    <string name="Colombia_value" translatable="false">co</string>
    <string name="Cuba" translatable="false">Cuba</string>
    <string name="Cuba_value" translatable="false">cu</string>
    <string name="Czech_Republic" translatable="false">Czech Republic</string>
    <string name="Czech_Republic_value" translatable="false">cz</string>
    <string name="Egypt" translatable="false">Egypt</string>
    <string name="Egypt_value" translatable="false">eg</string>
    <string name="France" translatable="false">France</string>
    <string name="France_value" translatable="false">fr</string>
    <string name="Germany" translatable="false">Germany</string>
    <string name="Germany_value" translatable="false">de</string>
    <string name="Greece" translatable="false">Greece</string>
    <string name="Greece_value" translatable="false">gr</string>
    <string name="Hong_Kong" translatable="false">Hong Kong</string>
    <string name="Hong_Kong_value" translatable="false">hk</string>
    <string name="Hungary" translatable="false">Bulgaria</string>
    <string name="Hungary_value" translatable="false">hu</string>
    <string name="India" translatable="false">India</string>
    <string name="India_value" translatable="false">in</string>
    <string name="Indonesia" translatable="false">Indonesia</string>
    <string name="Indonesia_value" translatable="false">id</string>
    <string name="Ireland" translatable="false">Ireland</string>
    <string name="Ireland_value" translatable="false">ie</string>
    <string name="Israel" translatable="false">Israel</string>
    <string name="Israel_value" translatable="false">il</string>
    <string name="Italy" translatable="false">Italy</string>
    <string name="Italy_value" translatable="false">it</string>
    <string name="Latvia" translatable="false">Latvia</string>
    <string name="Latvia_value" translatable="false">lv</string>
    <string name="Malaysia" translatable="false">Malaysia</string>
    <string name="Malaysia_value" translatable="false">my</string>
    <string name="Mexico" translatable="false">Mexico</string>
    <string name="Mexico_value" translatable="false">mx</string>
    <string name="Morocco" translatable="false">Morocco</string>
    <string name="Morocco_value" translatable="false">ma</string>
    <string name="Netherlands" translatable="false">Netherlands</string>
    <string name="Netherlands_value" translatable="false">nl</string>
    <string name="New_Zealand" translatable="false">New Zealand</string>
    <string name="New_Zealand_value" translatable="false">nz</string>
    <string name="Nigeria" translatable="false">Nigeria</string>
    <string name="Nigeria_value" translatable="false">ng</string>
    <string name="Norway" translatable="false">Norway</string>
    <string name="Norway_value" translatable="false">no</string>
    <string name="Philippines" translatable="false">Philippines</string>
    <string name="Philippines_value" translatable="false">ph</string>
    <string name="Poland" translatable="false">Poland</string>
    <string name="Poland_value" translatable="false">pl</string>
    <string name="Portugal" translatable="false">Portugal</string>
    <string name="Portugal_value" translatable="false">pt</string>
    <string name="Romania" translatable="false">Romania</string>
    <string name="Romania_value" translatable="false">ro</string>
    <string name="Russia" translatable="false">Russia</string>
    <string name="Russia_value" translatable="false">ru</string>
    <string name="Saudi_Arabia" translatable="false">Saudi Arabia</string>
    <string name="Saudi_Arabia_value" translatable="false">sa</string>
    <string name="Serbia" translatable="false">Serbia</string>
    <string name="Serbia_value" translatable="false">rs</string>
    <string name="Singapore" translatable="false">Singapore</string>
    <string name="Singapore_value" translatable="false">sg</string>
    <string name="Slovakia" translatable="false">Slovakia</string>
    <string name="Slovakia_value" translatable="false">sk</string>
    <string name="Slovenia" translatable="false">Slovenia</string>
    <string name="Slovenia_value" translatable="false">si</string>
    <string name="South_Africa" translatable="false">South Africa</string>
    <string name="South_Africa_value" translatable="false">za</string>
    <string name="South_Korea" translatable="false">South Korea</string>
    <string name="South_Korea_value" translatable="false">kr</string>
    <string name="Sweden" translatable="false">Sweden</string>
    <string name="Sweden_value" translatable="false">se</string>
    <string name="Switzerland" translatable="false">Switzerland</string>
    <string name="Switzerland_value" translatable="false">ch</string>
    <string name="Taiwan" translatable="false">Taiwan</string>
    <string name="Taiwan_value" translatable="false">tw</string>
    <string name="Thailand" translatable="false">Thailand</string>
    <string name="Thailand_value" translatable="false">th</string>
    <string name="Turkey" translatable="false">Turkey</string>
    <string name="Turkey_value" translatable="false">tr</string>
    <string name="UAE" translatable="false">UAE</string>
    <string name="UAE_value" translatable="false">ae</string>
    <string name="Ukraine" translatable="false">Ukraine</string>
    <string name="Ukraine_value" translatable="false">ua</string>
    <string name="United_Kingdom" translatable="false">United_Kingdom</string>
    <string name="United_Kingdom_value" translatable="false">gb</string>
    <string name="Venuzuela" translatable="false">Venuzuela</string>
    <string name="Venuzuela_value" translatable="false">ve</string>
    <string name="Business" translatable="false">business</string>
    <string name="Business_name">Business</string>
    <string name="Entertainment" translatable="false">entertainment</string>
    <string name="Entertainment_name">Entertainment</string>
    <string name="Health" translatable="false">health</string>
    <string name="Health_name">Health</string>
    <string name="Science" translatable="false">science</string>
    <string name="Science_name">Science</string>
    <string name="Sports" translatable="false">sports</string>
    <string name="Sports_name">Sports</string>
    <string name="Technology" translatable="false">technology</string>
    <string name="Technology_name">Technology</string>
    <string name="Main">Main Screen</string>
    <string name="no_data_available">No Articles found, please try again.</string>
    <string name="other">All Topics</string>
    <string name="browse">Browse</string>
    <string name="Credits">Open Source Libraries</string>
    <string name="drawer_open" translatable="false">opeb</string>
    <string name="drawer_close" translatable="false">closed</string>
    <string name="apiKey" translatable="false">apiKey</string>
    <string name="country" translatable="false">Country</string>
    <string name="SortBy" translatable="false">sortBy</string>
    <string name="pageSize" translatable="false">pageSize</string>
    <string name="dateFrom" translatable="false">from</string>
    <string name="dateTo" translatable="false">to</string>
    <string name="category" translatable="false">category</string>
    <string name="created_by">Created By:</string>
    <string name="justas" translatable="false">Justas</string>
    <string name="browse_over_5000_news_sources">Browse Over 5000 news sources</string>
    <string name="searchbarText">Search For Articles/Sources/Topics</string>
    <string name="drag_up_for">Drag up for</string>
    <string name="extended_search">Extended search</string>
    <string name="amount_of_results">Amount Of Results</string>
    <string name="sort_by">Sort By</string>
    <string name="relevancy">Relevancy</string>
    <string name="popularity">Popularity</string>
    <string name="published_at">Published At</string>
    <string name="from">From</string>
    <string name="click_on_me_and_pick_a_date">Click on me and pick a Date</string>
    <string name="to">To</string>
    <string name="language">Language:</string>
    <string name="cate">Category :</string>
    <string name="countr">Country :</string>
    <string name="results">Results</string>
    <string name="Favorites">Favorite Topic</string>
    <string name="favorites_watch_later">Favorites/Watch later</string>
    <string name="no_watchlater">No watch later articles</string>
    <string name="no_saved">No saved articles</string>
    <string name="no_internet">No internet connection</string>
    <string name="nosubscribed">No sources subscribed</string>
    <string name="librabries_we_use">Librabries We Use</string>
    <string name="we_thank_open_source" translatable="true">The following sets forth attribution notices for third party software that may be contained in portions of the Reporter product. We thank the open source community for all of their contributions</string>
    <string name="appcompat_library" translatable="false">Copyright (C) 2011 The Android Open Source Project * * Licensed under the Apache License, Version 2.0 (the “License“); * you may not use this file except in compliance with the License. * You may obtain a copy of the License at * * http://www.apache.org/licenses/LICENSE-2.0 * * Unless required by applicable law or agreed to in writing, software * distributed under the License is distributed on an “AS IS“ BASIS, * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. * See the License for the specific language governing permissions and * limitations under the License.</string>
    <string name="picasso" translatable="false">Picasso</string>
    <string name="appcompat" translatable="false">AppCompat, Preference-v7</string>
</resources>