<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slidingup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:paddingBottom="@dimen/umanopaddingbottom"
    app:umanoPanelHeight="@dimen/umanopanelheight"
    app:umanoShadowHeight="@dimen/ummanoshadowheight">

    <LinearLayout
        android:id="@+id/container"
        style="@style/matchnmatch"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/searchbarSize"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/searchbarText"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsizeInsearchBAr" />

            <ImageView
                android:id="@+id/searchbutton"
                android:layout_width="@dimen/sizeOFWeightedItem"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/minmargin"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/search" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/hidlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/alertpic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:tint="@color/errortext" />

            <TextView
                android:id="@+id/alerttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alertpic"
                android:layout_centerInParent="true"
                android:paddingLeft="@dimen/paddingaverage"
                android:paddingRight="@dimen/paddingaverage"
                android:textAlignment="center"
                android:textColor="@color/errortext"
                android:textSize="@dimen/textoferror" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/weblayout"
            style="@style/matchnmatch"
            android:background="@color/backgroundofWebview"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sizeOfWebview"
                android:layout_centerInParent="true">

                <WebView
                    android:id="@+id/webview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sizeOfWebview"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/marginofwebview" />

                <ProgressBar
                    android:id="@+id/pB1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/webview"
                    android:layout_marginTop="-8dp" />

                <ImageView
                    android:id="@+id/closeweb"
                    style="@style/wrapnwrap"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_close" />
            </RelativeLayout>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        style="@style/matchnwrap">

        <LinearLayout
            style="@style/matchnwrap"
            android:orientation="vertical">

            <LinearLayout
                style="@style/matchnwrap"
                android:orientation="vertical">

                <TextView
                    style="@style/matchnwrap"
                    android:text="@string/drag_up_for"
                    android:textAlignment="center"
                    android:textSize="@dimen/dragupsize" />

                <TextView
                    style="@style/matchnwrap"
                    android:text="@string/extended_search"
                    android:textAlignment="center"
                    android:textSize="@dimen/extendedsearchTextsize" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekbar"
                style="@style/matchnwrap"
                android:padding="@dimen/averageOfpaddingnmargin" />

            <TextView
                android:id="@+id/results"
                style="@style/matchnwrap"
                android:padding="@dimen/averageOfpaddingnmargin"
                android:text="@string/amount_of_results"
                android:textAlignment="center" />

            <TextView
                style="@style/matchnwrap"
                android:text="@string/sort_by"
                android:textAlignment="center" />

            <RadioGroup
                android:id="@+id/radiogroup"
                style="@style/matchnwrap"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/relevancy"
                    style="@style/wrapnwrap"
                    android:text="@string/relevancy" />

                <RadioButton
                    android:id="@+id/popularity"
                    style="@style/wrapnwrap"
                    android:text="@string/popularity" />

                <RadioButton
                    android:id="@+id/publishedAt"
                    style="@style/wrapnwrap"
                    android:text="@string/published_at" />
            </RadioGroup>

            <TextView
                style="@style/matchnmatch"
                android:text="@string/from"
                android:textAlignment="center"
                android:textSize="@dimen/sizeofSourceTITLE" />

            <TextView
                android:id="@+id/from"
                style="@style/matchnwrap"
                android:padding="@dimen/averageOfpaddingnmargin"
                android:text="@string/click_on_me_and_pick_a_date"
                android:textAlignment="center" />

            <DatePicker
                android:id="@+id/datepickerfrom"
                style="@style/matchnwrap"
                android:visibility="gone" />

            <TextView
                style="@style/matchnmatch"
                android:text="@string/to"
                android:textAlignment="center"
                android:textSize="@dimen/sizeofSourceTITLE" />

            <TextView
                android:id="@+id/to"
                style="@style/matchnwrap"
                android:padding="@dimen/averageOfpaddingnmargin"
                android:text="@string/click_on_me_and_pick_a_date"
                android:textAlignment="center" />

            <DatePicker
                android:id="@+id/datepickerto"
                style="@style/matchnwrap"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>